# DRU_CRUD_ANGULAR

./: .gitignore  README.md
.github/workflows/: test.yml
apps/: .gitignore
apps/backend/: Dockerfile  pyproject.toml  test_api.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: auth.py  budgets.py  habits.py
apps/backend/app/core/: config.py  security.py
apps/backend/app/db/: deps.py  session.py
apps/backend/app/models/: budget.py  user.py
apps/backend/app/schemas/: auth.py  budget.py
apps/backend/tests/: test_api.py
apps/frontend/: .eslintrc.json  angular.json  jest.config.js  package-lock.json  package.json  tsconfig.json
apps/frontend/src/: app.component.ts  app.config.ts  app.routes.ts  main.ts
apps/frontend/src/app/core/config/: app-config.token.ts
apps/frontend/src/app/core/guards/: auth.guard.ts
apps/frontend/src/app/core/interceptors/: auth.interceptor.ts  error.interceptor.ts
apps/frontend/src/app/core/services/: http.service.ts
apps/frontend/src/app/features/auth/: auth.routes.ts
apps/frontend/src/app/features/budgets/: budgets.routes.ts
apps/frontend/src/app/features/dashboard/: dashboard.routes.ts
apps/frontend/src/app/features/habits/: habits.routes.ts
apps/frontend/src/app/features/products/: products.routes.ts
apps/frontend/src/app/shared/models/: auth.model.ts  budget.model.ts  habit.model.ts
apps/frontend/src/app/ui/button/: button.component.ts
apps/frontend/src/app/ui/card/: card.component.ts
apps/frontend/src/environments/: environment.prod.ts  environment.ts
(+20 files in other folders)
