[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dru-crud-backend"
version = "0.1.0"
description = "Backend API for DRU CRUD application"
authors = [
    {name = "Antonio", email = "antonio@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report=term-missing --cov=app {args:tests}"
